OO-5480, OO-5483: first implementation of filters groups
First implementation of the filters groups with collapsible row of
filters. Implementation of bulk actions over the table